@@ -3,6 +3,7 @@
 == Version 2.4.4 (2018-xx-xx)
 
 * Display a hint when endian is omitted.  Requested by Tails.
+* Add thread safety to Integer/BitField creation.  Requested by jbpeirce.
 
 == Version 2.4.3 (2018-03-10)
 
